MarcoKitTests/TestData/error/array4.marco
--before
[[[[[[[[]]]]]]]

--after
15: Unexpected end of file
